Closed Bug 1559240 Opened 6 years ago Closed 6 years ago

Subframe crashes don't show the about:framecrashed page anymore.

Categories

(Core :: DOM: Content Processes, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: mconley, Assigned: mconley)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Bug 1553952 refactored some things, including our subframe crash event structure. One thing it did was make the nsFrameLoader responsible for firing the oop-browser-crashed event, instead of the BrowserParent.

However, when it does this, the frameloader passes along the information about it's top-level BrowsingContext, rather than the one that crashed.

We should have the frameloader fire the event with the BrowsingContext information of the subframe that actually crashed.

We should probably also write a subframe crash test.

In the interests of getting this ready for the demo next week, I'm going to punt out writing a test for this to a separate bug so this can land hopefully today or tomorrow. The test will require some infrastructure to make it easy for me to crash subframes.

Blocks: 1559244
Pushed by mconley@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ac140c69f74e Make sure oop-browser-context passes the BrowsingContext of the crashing subframe. r=rhunt
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Regressions: 1561205
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: