Bug 1559240 - Make sure oop-browser-context passes the BrowsingContext of the crashing subframe. r=rhunt

Differential Revision: https://phabricator.services.mozilla.com/D34930